--- a/src/app/summary-page/summary-page.component.css
+++ b/src/app/summary-page/summary-page.component.css
@@ -1,13 +1,34 @@
 #container{
     width:100%;
-    min-height:32.6rem;
     padding:5%;
+    min-height:32.6rem;
     color: rgb(60,60,60);
     background-color: rgba(255, 255, 255, 0.674);
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
+    
   }
 
-.content{
+.basicContentOfText{
     text-align: left;
+}
+.firstContentOfRightedText{
+  text-align:right;
+  margin: 8rem;
+}
+.secondContentOfCenteredText{
+  text-align: center;
+}
+.theSmallestImage {
+  width: 4%;
+  float: left;
+  border-radius: 50px;
+  margin-right: 3%;
+}
+.theSmallerImage{
+  width: 5%;
+  padding-top: 5%;
+  align-items: flex-end;
+  border-radius: 50px;
+  margin-right: 3%;
 }
