--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -1,18 +1,18 @@
-<div class="box">
-  <div *ngFor="let lecture of lectures">
+<div class="col">
+  <div class="row justify-content-around">
+  <div *ngFor="let lecture of lectures" class="col-5 row justify-content-around center">
     <form>
-      <div class="card border-dark mb-3 max width margin">
+      <div class="card border-dark mb-3 min-width margin">
         <div class="card-body text-dark">
         <input (click)="handleCourseClick($event, lecture.title)" type="checkbox" class="checkmark">
-        <div class="card-content">
-          <h4 class="card-title"><i>{{ lecture.title }}</i></h4>
+          <h4 class="card-title"><i>{{ lecture.title }}</i></h4><hr>
           <p class="card-text"><i>{{ lecture.description }}</i></p>
           <p class="card-text"><i>Price: {{ lecture.price }}</i></p>
           <p class="card-text"><i>Duration: {{ lecture.duration }}</i></p>
-          </div>
         </div>
       </div>
     </form>
+  </div>
   </div>
 </div>
 <div class="emailContainer">
