--- a/src/app/course/course-page/course-page.component.scss
+++ b/src/app/course/course-page/course-page.component.scss
@@ -1,41 +1,48 @@
 @import "../../../../palete.scss";
 
 .min-width {
-  min-width: 10rem;
+  max-width: 50rem;
+  max-height:15rem;
+  min-height: 16vh;
+  min-width: 16vh;
 }
-.row{
+
+.row {
   margin:0;
 }
 
 .center {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
 }
 
-.card-header2{
+.card-header2 {
   text-align: center;
   font-family:"Lucida Handwriting", monospace;
   padding-top: 2vh;
   padding-bottom: 2vh;
 }
 
-.card{
-  background-color: $cardBackground;
-  border:0.2rem solid black;
+.card {
+  background-color: $inqooBlue;
   cursor: pointer;
 }
 
-.card:hover{
+.card:hover {
   background-color: $cardBackgroundOnHover;
 }
 
 .card-text{
   text-align: justify;
-  font-size:3vh;
+  font-size:2.5vh;
+  color:whitesmoke;
+  text-shadow: none;
 }
 
 .card-title{
   text-align: justify;
-  font-size:5vh;
+  font-size:4vh;
+  color:whitesmoke;
+  text-shadow: none;
 }
 
 
