--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -1,14 +1,14 @@
 <div class="col">
   <div class="row justify-content-around">
-  <div *ngFor="let lecture of lectures" class="col-5 row justify-content-around center">
+  <div *ngFor="let lecture of lectures" class="col-6 row justify-content-around center">
     <form>
       <div class="card border-dark mb-3 min-width margin">
         <div class="card-body text-dark">
         <input (click)="handleCourseClick($event, lecture.title)" type="checkbox" class="checkmark">
           <h4 class="card-title"><i>{{ lecture.title }}</i></h4><hr>
           <p class="card-text"><i>{{ lecture.description }}</i></p>
-          <p class="card-text"><i>Price: {{ lecture.price }}</i></p>
-          <p class="card-text"><i>Duration: {{ lecture.duration }}</i></p>
+          <p class="card-text"><i>Price: {{ lecture.price }}<br>
+          Duration: {{ lecture.duration }}</i></p>
         </div>
       </div>
     </form>
