--- a/src/app/lecture/lecture-page/lecture-page.component.scss
+++ b/src/app/lecture/lecture-page/lecture-page.component.scss
@@ -1,14 +1,21 @@
 @import "../../../../palete.scss";
 
 .min-width {
-  min-width: 10rem;
+  max-width: 50rem;
+  max-height:15rem;
+  min-height: 16vh;
+  min-width: 16vh;
+}
+
+.row {
+  margin:0;
 }
 
 .center {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
 }
 
-.card-header2{
+.card-header2 {
   text-align: center;
   font-family:"Lucida Handwriting", monospace;
   padding-top: 2vh;
@@ -16,18 +23,19 @@
 }
 
 .card {
-  border: 0.2rem solid lightgray;
-  background-color: $cardBackground;
+  background-color: $inqooBlue;
 }
 
 
-.card-content{
+.card-content {
   float:left;
 }
 
 .card-text {
   text-align: justify;
   font-size:3vh;
+  color:whitesmoke;
+  text-shadow: none;
 }
 
 .emailContainer {
@@ -69,6 +77,8 @@
 .card-title{
   text-align: justify;
   font-size:5vh;
+  color:whitesmoke;
+  text-shadow: none;
 }
 
 
