--- a/src/app/course/course-page/course-page.component.html
+++ b/src/app/course/course-page/course-page.component.html
@@ -1,7 +1,9 @@
 <div class="col">
   <div class="row justify-content-around">
     <div *ngFor="let course of courses" class="col-6 row justify-content-around center">
-      <div class="card border-dark mb-3 min-width margin" [routerLink]="['/lecture-page/', course.title]">
+      <div class="card border-dark mb-3 min-width margin"
+           (click)="getSelectedCourseTitle(course.title)"
+           [routerLink]="['/lecture-page/', course.title]">
         <div class="card-body text-dark">
           <h4 class="card-title">
           <i>{{ course.title }}</i></h4><hr>
