Fixed error message and color names

--- a/src/app/course/course-page/course-page.component.scss
+++ b/src/app/course/course-page/course-page.component.scss
@@ -34,14 +34,14 @@
 .card-text{
   text-align: justify;
   font-size:2.5vh;
-  color:whitesmoke;
+  color:$whiteSmoke;
   text-shadow: none;
 }
 
 .card-title{
   text-align: justify;
   font-size:4vh;
-  color:whitesmoke;
+  color:$whiteSmoke;
   text-shadow: none;
 }
 
