--- a/src/app/category/category-page/category-page.component.scss
+++ b/src/app/category/category-page/category-page.component.scss
@@ -19,7 +19,7 @@
   font-family:"Lucida Handwriting", monospace;
   font-size: 4vw;
   padding:7vh;
-  color:whitesmoke;
+  color:$whiteSmoke;
   text-shadow: none;
 }
 
