--- a/src/app/lecture/lecture-page/lecture-page.component.scss
+++ b/src/app/lecture/lecture-page/lecture-page.component.scss
@@ -33,7 +33,7 @@
 .card-text {
   text-align: justify;
   font-size:3vh;
-  color:whitesmoke;
+  color:$whiteSmoke;
   text-shadow: none;
 }
 
@@ -75,7 +75,7 @@
 .card-title{
   text-align: justify;
   font-size:5vh;
-  color:whitesmoke;
+  color:$whiteSmoke;
   text-shadow: none;
 }
 
