--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div id="header">
-<app-header></app-header>
-</div>
-<div id="footer">
-<app-footer></app-footer>
-</div>
+ <div id="page-container">
+   <div id="content-wrap">
+     <app-header></app-header>
+   </div>
+   <app-footer></app-footer>
+ </div>
