--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,9 @@
 <div class="footer">
-Telefon: 123-123-123
-
-<i class="fab fa-linkedin fa-2x"></i>
-<i class="fab fa-facebook-square fa-2x"></i>
-<i class="fab fa-twitter-square fa-2x"></i>
-<i class="fab fa-instagram-square fa-2x"></i>
+<p class="phone">Telefon: 123-123-123</p>
+<p class="icons">
+<a href="https://www.linkedin.com/company/inqoo-work-it-out/?originalSubdomain=pl" target="new"><i class="fab fa-linkedin fa-2x"></i></a>
+<a href="https://www.facebook.com/inqoo.it" target="new"><i class="fab fa-facebook-square fa-2x"></i></a>
+<a href="https://www.twitter.com/inqooit" target="new"><i class="fab fa-twitter-square fa-2x"></i></a>
+<a href="https://www.instagram.com/inqoo.it/" target="new"><i class="fab fa-instagram-square fa-2x"></i></a>
+</p>
 </div>
