--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,14 +1,31 @@
 @import "../../../palete.scss";
 .footer{
     background-color: $inqooBlue;
-    height:4rem;
-    width:100%;
     text-align: center;
     color:$whiteSmoke;
     text-shadow: none;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 3.5rem;  
+}
+
+.phone{
+    float: left;
+    padding-top: 0.85rem;
+    padding-left: 2rem;
+}
+
+.icons{
+    float: left;
+    padding-left: 2rem;
+    padding-top: 0.5rem;
 }
 
 .fab{
-    padding-left: 0.25rem;
-    padding-top:0.75rem;
+    margin-left: 0.6rem;
+}
+
+a{
+    color:$whiteSmoke;
 }
