--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -7,15 +7,15 @@
         <input (click)="handleCourseClick($event, lecture.title)" type="checkbox" class="checkmark">
           <h4 class="card-title"><i>{{ lecture.title }}</i></h4><hr>
           <p class="card-text"><i>{{ lecture.description }}</i></p>
-          <p class="card-text"><i>Price: {{ lecture.price }}<br>
-          Duration: {{ lecture.duration }}</i></p>
+          <p class="card-text"><i>Price: {{ lecture.price }} zł<br>
+          Duration: {{ lecture.duration }} godzin</i></p>
         </div>
       </div>
     </form>
   </div>
   </div>
 </div>
-<div class="emailContainer fixed-bottom">
+<div class="emailContainer">
   <div class="errors sticky-top">
     <small *ngIf="checkIfEmailIsRequiredErrorShouldBeDisplayed()"
            class="alert alert-danger" role="alert">Email is required</small>
