--- a/src/app/lecture/lecture-page/lecture-page.component.scss
+++ b/src/app/lecture/lecture-page/lecture-page.component.scss
@@ -2,7 +2,7 @@
 
 .min-width {
   max-width: 50rem;
-  max-height:15rem;
+  max-height:18rem;
   min-height: 16vh;
   min-width: 16vh;
 }
@@ -35,6 +35,7 @@
   font-size:3vh;
   color:$whiteSmoke;
   text-shadow: none;
+  line-height: 1.25rem;
 }
 
 .emailContainer {
@@ -89,4 +90,3 @@
 hr{
   color: white;
 }
-
