--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,23 +7,24 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 3.5rem;  
+    height: 3.5rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
 }
 
 .phone{
-    float: left;
+    float:right;
     padding-top: 0.85rem;
     padding-left: 2rem;
 }
 
 .icons{
-    float: left;
-    padding-left: 2rem;
-    padding-top: 0.5rem;
+    float:left;
 }
 
 .fab{
     margin-left: 0.6rem;
+    margin-top:0.5rem;
 }
 
 a{
