--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -7,8 +7,8 @@
         <input (click)="handleCourseClick($event, lecture.title)" type="checkbox" class="checkmark">
           <h4 class="card-title"><i>{{ lecture.title }}</i></h4><hr>
           <p class="card-text"><i>{{ lecture.description }}</i></p>
-          <p class="card-text"><i>Price: {{ lecture.price }} zł<br>
-          Duration: {{ lecture.duration }} godzin</i></p>
+          <p class="card-text"><i>Cena: {{ lecture.price }} zł<br>
+          Czas trwania: {{ lecture.duration }} godzin</i></p>
         </div>
       </div>
     </form>
