improved summary page commit

--- a/src/app/summary-page/summary-page.component.html
+++ b/src/app/summary-page/summary-page.component.html
@@ -1,14 +1,15 @@
 <div id="container">
-  <h1 class="secondContentOfCenteredText"><strong>Podsumowanie</strong></h1>
+  <h1 class="secondContentOfCenteredText"><strong>Podsumowanie!</strong></h1>
     <h2><strong>Wybrane kursy<img class="theSmallerImage" src="../assets/images/arrowka.png"></strong></h2>
     <div  *ngFor="let lecture of lecturesToDisplay" class="basicContentOfText">
     <h3><strong>{{lecture}}</strong></h3>
   </div>
   <div>
-    <h3> <img class="theSmallestImage" src="../assets/images/maillogo.png">Email został wysłany do <strong>{{emailToDisplay}}</strong></h3>
+    <h3> <strong><img class="theSmallestImage" src="../assets/images/maillogo.png">Email został wysłany do {{emailToDisplay}}</strong></h3>
   </div>
-  <div class="firstContentOfRightedText"><h3><strong>Serdecznie dziękujemy za zainteresowanie naszą ofertą, Zespół INQOO.</strong></h3></div>
-  <button [routerLink]="['/landing-page']" class="btn btn-primary" type="button">
+  <button  [routerLink]="['/landing-page']" class="btn btn-primary" type="button">
     Powrót do strony głównej
   </button>
+  <div class="alignCenter"><img class="theSmallImage" src="../assets/images/pagebanner.png"></div>
+  <div class="firstContentOfRightedText"><h3><strong>Serdecznie dziękujemy za zainteresowanie naszą ofertą, Zespół INQOO.</strong></h3></div>
 </div>
