--- a/src/app/lecture/lecture-page/lecture-page.component.html
+++ b/src/app/lecture/lecture-page/lecture-page.component.html
@@ -6,9 +6,9 @@
         <div class="card-body text-dark">
         <input (click)="handleCourseClick($event, lecture.title)" type="checkbox" class="checkmark">
           <h4 class="card-title"><i>{{ lecture.title }}</i></h4><hr>
-          <p class="card-text"><i>{{ lecture.description }}</i></p>
-          <p class="card-text"><i>Cena: {{ lecture.price }} zł<br>
-          Czas trwania: {{ lecture.duration }} godzin</i></p>
+          <div class="card-description"><i>{{ lecture.description }}</i></div>
+          <div class="card-text"><i>Cena: {{ lecture.price }} zł<br>
+          Czas trwania: {{ lecture.duration }} godzin</i></div>
         </div>
       </div>
     </form>
@@ -16,20 +16,27 @@
   </div>
 </div>
 <div class="emailContainer">
-  <div class="errors sticky-top">
-    <small *ngIf="checkIfEmailIsRequiredErrorShouldBeDisplayed()"
-           class="alert alert-danger" role="alert">Email is required</small>
-    <small *ngIf="email.errors?.pattern" class="alert alert-danger" role="alert">Email is invalid</small>
-    <small *ngIf="checkIfCheckBoxErrorShouldBeDisabled()"
-           class="alert alert-danger" role="alert">No lectures selected</small>
-  </div>
-  <div class="emailForm">
-    <label class="emailLabel" for="email">Email: </label>
-    <input [formControl]="email" [placeholder]="'example@email.com'" class="emailInput" id="email" type="email">
-    <button (click)="onSubmit(checkedLectures,email.value) "
-            [disabled]="checkIfButtonShouldBeDisabled()"
-            class="btn-primary buttonHeight"
-            type="button">Submit
-    </button>
+  <div class="emailForm row">
+    <div class="col-sm-10">
+     <div>
+       <label class="emailLabel" for="email">Email: </label>
+       <input [formControl]="email" [placeholder]="'example@email.com'"
+              class="emailInput" id="email" type="email">
+     </div>
+      <div>
+        <small *ngIf="checkIfEmailIsRequiredErrorShouldBeDisplayed()"
+               class="alert-danger">Email is required</small>
+        <small *ngIf="email.errors?.pattern" class="alert-danger">Email is invalid</small>
+        <small *ngIf="checkIfCheckBoxErrorShouldBeDisabled()"
+               class="alert-danger">No lectures selected</small>
+      </div>
+    </div>
+    <div class="col-sm-2">
+      <button (click)="onSubmit(checkedLectures,email.value) "
+              [disabled]="checkIfButtonShouldBeDisabled()"
+              class="btn-primary buttonHeight"
+              type="button">Submit
+      </button>
+    </div>
   </div>
 </div>
